# ProtivoGaZiK

./: CMakeLists.txt  CMakeListsForConsole.txt  README.md  graph.dot  linked_list.ps  makeGraphFromConsole  out.ps  result.txt
Calc/: Makefile  calc.lex  calc.y  expr  flex.l  get_image.sh  getimg.sh  graph.dot  heading.h  main.cc  out.ps
Examples/: BinarySearch.java  BinarySearch.ps  BinaryTree.java  BinaryTree.ps  BubbleSort.ps  Factorial.ps  LinearSearch.ps  QuickSort.java  QuickSort.ps  TreeVisitor.ps
Examples/BadSamples/: TC_9a_2.java
Examples/TestForChecker/: AssigmentNotEqualTypes.java  BuiltinRedefinition.java  CallLengthForNotArrayType.java  CallMethodFromIntegerVariable.java  CallNotExistingMethodFromClass.java  CallPrivateMethod.java  ClassRedefinition.java  DependencyLoop.java  FieldRedefinition___NotWork.java  FieldToMethodRedefinition.java  IfNonIntegerCondition.java  LocalRedefinition__Notwork.java  MethodRedefinition.java  NonDefinedTypeInVariable.java  NotIntegerArithmeticOperation.java  NotIntegerArrayIndex.java  NotIntegerArraySizeInNew.java  NotIntegerPrintlnValue.java  ParameterRedefinition.java  UsingNotDeterminatedClassWithNew.java  WhileNonIntegerCondition.java  WrongArgumentsType.java  WrongMethodArguments_notWork.java  cyclicClassInheritance.java
FirstTask/: CAssignStatement.cpp  CAssignStatement.h  CCompoundStatement.cpp  CCompoundStatement.h  CIdExpression.h  CNumExpression.h  COperationExpression.cpp  COperationExpression.h  CPrintVisitor.cpp  CPrintVisitor.h  IExpression.h  INode.h  IStatement.h  IVisitor.h  InitialCommit  Makefile  main.cpp
FirstTask/results/: graph.dot
FirstTask/source/: CAssignStatement.cpp  CAssignStatement.h  CExpressionList.h  CIdExpression.cpp  CNumExpression.h  COperationExpression.cpp  COperationExpression.h  CPrintStatement.h  CPrintVisitor.cpp  CPrintVisitor.h  IExpression.h  IVisitor.h  main.cpp
MainProject/: Makefile  flex.l  flex.out  lex.yy.c  lex.yy.cc
MainProject/resourceForFlexTest/: javafunc.java
MiniJavaCompiler/: .gitignore  CMakeLists.txt  Makefile  graph.dot
MiniJavaCompiler/AbstractSyntaxTree/Analyzer/: Analyzer.cpp  Analyzer.h  CAnalyzer.cpp  CAnalyzer.h  Errors.cpp  Errors.h
MiniJavaCompiler/AbstractSyntaxTree/Nodes/: CArrayConstructionExpression.cpp  CArrayConstructionExpression.h  CAssignItemStatement.cpp  CAssignItemStatement.h  CAssignStatement.cpp  CAssignStatement.h  CBoolExpression.cpp  CBoolExpression.h  CClass.cpp  CClass.h  CCompoundStatement.cpp  CCompoundStatement.h  CConstructClassExpression.cpp  CConstructClassExpression.h  CExpressionList.h  CGetItemExpression.cpp  CGetItemExpression.h  CIdExpression.cpp  CIdExpression.h  CIfElseStatement.cpp  CIfElseStatement.h  CLengthExpression.cpp  CLengthExpression.h  CListExpression.cpp  CListExpression.h  CListMethod.cpp  CListMethod.h  CListMethodDecl.cpp  CListMethodDecl.h  CListStatement.cpp  CListStatement.h  CListVarDecl.cpp  CListVarDecl.h  CMainClass.cpp  CMainClass.h  CMethod.cpp  CMethod.h  CMethodCallExpression.cpp  CMethodCallExpression.h  CNotExpression.cpp  (+18 more)
MiniJavaCompiler/AbstractSyntaxTree/StringInternment/: Strings.cpp  Strings.h
MiniJavaCompiler/AbstractSyntaxTree/Visitors/: CCheckTypesVisitor.cpp  CCheckTypesVisitor.h  CGetClassesVisitor.cpp  CGetClassesVisitor.h  CInfoClasses.cpp  CInfoClasses.h  CPrintVisitor.cpp  CPrintVisitor.h  CSymbolTable.cpp  CSymbolTable.h  CValidateVisitor.cpp  CValidateVisitor.h  IVisitor.h  IrtBuilderVisitor.cpp  IrtBuilderVisitor.h
MiniJavaCompiler/CodeGeneration/: HolyPatricVisitor.cpp  HolyPatricVisitor.h  MunchVisitor.cpp  MunchVisitor.h
MiniJavaCompiler/IRTree/: BlockLinearizer.cpp  BlockLinearizer.h  CLabel.cpp  CLabel.h  Canonization.cpp  Canonization.h  Frame.cpp  Frame.h  Label.cpp  Label.h  SubtreeWrapper.cpp  SubtreeWrapper.h  Temporary.cpp
MiniJavaCompiler/IRTree/Nodes/: Expression.cpp  Expression.h  ExpressionList.cpp  ExpressionList.h  NodeNames.cpp  Statement.cpp  Statement.h  StatementList.cpp  StatementList.h  VisitorTarget.h
MiniJavaCompiler/IRTree/Visitors/: BlockSplitterVisitor.cpp  BlockSplitterVisitor.h  DotLangVisitor.cpp  DotLangVisitor.h  DoubleCallEliminationVisitor.cpp  DoubleCallEliminationVisitor.h  SeqLinearizerVisitor.cpp  SeqLinearizerVisitor.h  Visitor.cpp  Visitor.h
MiniJavaCompiler/Nodes/: CAssignStatement.cpp  CAssignStatement.h  CNumExpression.cpp  COperationExpression.h  CPrintStatement.cpp  CPrintVisitor.cpp
MiniJavaCompiler/Output/: lexer.cpp  parser.cpp  parser.output
MiniJavaCompiler/Parser/: CommonInclude.h  Makefile  bison.y  common_include.h  expr  flex.l  heading.h  main.cc
